--- a/Exaspher.WxPayFrame.Core/Exaspher.WxPayFrame.Core.csproj
+++ b/Exaspher.WxPayFrame.Core/Exaspher.WxPayFrame.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="HttpHandler.cs" />
     <Compile Include="IWxPayService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnifiedOrderRequestData.cs" />
     <Compile Include="WxPayService.cs" />
   </ItemGroup>
   <ItemGroup>
