--- a/Exaspher.WxPayFrame.Core/Exaspher.WxPayFrame.Core.csproj
+++ b/Exaspher.WxPayFrame.Core/Exaspher.WxPayFrame.Core.csproj
@@ -33,6 +33,9 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.1.8.6.1\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -48,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dto\ApplyMentDto.cs" />
+    <Compile Include="Dto\CertificatesResult.cs" />
     <Compile Include="Dto\JSAPIRequestData.cs" />
     <Compile Include="HttpHandler.cs" />
     <Compile Include="IWxPayService.cs" />
