--- a/Exaspher.WxPayFrame.Core/packages.config
+++ b/Exaspher.WxPayFrame.Core/packages.config
@@ -2,4 +2,11 @@
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Senparc.CO2NET" version="1.3.104" targetFramework="net472" />
+  <package id="Senparc.CO2NET.APM" version="0.9.103" targetFramework="net472" />
+  <package id="Senparc.CO2NET.AspNet" version="0.3.104" targetFramework="net472" />
+  <package id="Senparc.NeuChar" version="1.2.105" targetFramework="net472" />
+  <package id="Senparc.Weixin" version="6.7.502" targetFramework="net472" />
+  <package id="Senparc.Weixin.Open" version="4.7.502.2" targetFramework="net472" />
+  <package id="Senparc.Weixin.TenPay" version="1.5.502.3" targetFramework="net472" />
 </packages>
